# clamav-gui

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml  test-build.yml
docs/: CONTRIBUTING.md  README.md  faq.md  installation.md  troubleshooting.md  usage.md
public/locales/en/: confirmation.json  history.json  messages.json  no-clamav-page.json  overview.json  quarantine.json  scan.json  scheduler.json  settings.json
public/locales/fr/: about.json  confirmation.json  credits.json  history.json  messages.json  no-clamav-page.json  overview.json  quarantine.json  scan-settings.json  scan.json  scheduler.json  settings.json  stats.json  table.json  translation.json  update.json
public/locales/hy/: scan.json  (+7 more)
scripts/: missing-keys.ts
src/: App.css
src-tauri/: Cargo.toml  tauri-pr.conf.json  tauri.conf.json
src-tauri/assets/i18n/: fr.json  pl.json
src-tauri/capabilities/: default.json
src-tauri/src/antivirus/: history.rs  mod.rs  scan.rs  update.rs
src-tauri/src/helpers/: log.rs  matcher.rs  mod.rs  real_time.rs  scan.rs  sys_tray.rs
src-tauri/src/system/: mod.rs
src-tauri/src/types/: enums.rs
src/@types/: i18next.d.ts
src/components/: confirmation.tsx  main-sidebar.tsx
src/contents/: history.tsx  overview.tsx  scan-menu.tsx  scheduler.tsx
src/context/: real-time.tsx  settings.tsx
src/hooks/: use-gui-updater.ts  use-scan-profile.ts  use-settings.ts
src/i18n/: config.ts
src/lib/: schemas.ts  store.ts
src/pages/: about.tsx  quarantine.tsx  scan.tsx
(+56 files in other folders)
